# djangorestframework-snatch

./: .gitignore  README.md  pyproject.toml  setup.py
example/: settings.py  urls.py
example/manager/: admin.py  models.py  serializer.py  urls.py  views.py
snatch/: exceptions.py  fields.py  mixins.py  routers.py  serializers.py  utils.py  viewsets.py  wrappers.py
snatch/options/: info.py  info_config.py  schema.py
snatch/search/: parse_qs.py  tuples.py
snatch/search/operators/: converters.py
src/: pyproject.toml
src/example/: manage.py  settings.py  urls.py
src/example/main/: settings.py  urls.py
src/example/manager/: apps.py  models.py  serializer.py  tests.py  urls.py  views.py
src/example/manager/migrations/: 0001_initial.py  0002_actionmodel_parent.py
src/snatch/: exceptions.py  fields.py  mixins.py  routers.py  serializers.py  tuples.py  validators.py  viewsets.py  wrappers.py
src/snatch/old/: exceptions.py
src/snatch/old/options/: info_utils.py  services.py  views.py
src/snatch/old/search/: parse_qs.py  serializer_utils_regular.py
src/snatch/search/: parse_qs.py  validators.py
src/snatch/search/operators/: consts.py  converters.py
src/tests/: test_parse_qs.py
