[tool.poetry]
name = "djangorestframework-snatch"
version = "0.1.0"
description = ""
authors = ["abott <abott@usetech.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
